syntax = "proto3";

package game;

service MainService {
  rpc health(Empty) returns (Empty); 
  rpc getState(Empty) returns (PlayerView);
  rpc input(InputRequest) returns (Empty);
  rpc kill(Empty) returns (Empty);
}

message Empty {}

message InputRequest {
  float x = 1;
  float z = 2;
}

message PlayerView {
  repeated Terrain surrounding = 1;
  float x = 2;
  float y = 3;
  float z = 4;
  
}

message Terrain {
  float height = 1;
  int32 kind = 2;
}